# demo-rust

./: .cliff.toml  .release.toml  CHANGELOG.md  Cargo.toml  Makefile.toml
src/: main.rs
