[package]
name = "demo-rust"
version = "0.1.9"
edition = "2024"
authors = ["confkit team"]
description = "A demo rust project"
license = "MIT"
repository = "https://github.com/confkit/engine"
exclude = [
  "example/**",
  "docs/**/*",
  "tests/**/*",
  ".cursor/**/*",
  ".vscode/**/*",
  ".git/**/*",
  ".gitignore"
]

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"
