[package]
authors = ["confkit team"]
description = "A demo rust project"
edition = "2024"
exclude = [
  "example/**",
  "docs/**/*",
  "tests/**/*",
  ".cursor/**/*",
  ".vscode/**/*",
  ".git/**/*",
  ".gitignore",
]
license = "MIT"
name = "demo-rust"
repository = "https://github.com/confkit/demo-rust"
version = "0.1.9"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.0", features = ["full"]}
tower-http = {version = "0.6.6", features = ["cors"]}
